Implementation of full image view, minor comment, and code client up, updated TODO

--- a/Todo
+++ b/Todo
@@ -1,8 +1,6 @@
-Time stamp -- by day -- Done set to up
-move name to the bottom
+Time stamp
 
 
 refactor architecture
 unit tests
 
-when you send an image want it to show up as full screen -- nav bar back
